adding todo html, js & css

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -96,3 +96,74 @@ h1 {
     font-size: 18px;
     margin-bottom: 20px;
 }
+
+.todo-form {
+    display: flex;
+    justify-content: left;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.todo-form input[type="text"] {
+    flex-grow: 1;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.todo-form button {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.todo-list {
+    display: block;
+    margin-top: 20px;
+    list-style-type: none;
+    padding: 0;
+}
+
+.todo-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+.todo-item:last-child {
+    border-bottom: none;
+}
+
+.todo-item input[type="checkbox"] {
+    margin-right: 10px;
+}
+
+.todo-item button {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+#todo-input{
+    border: none;
+    border-bottom: 4px solid #4CAF50;
+    outline: 0;
+    padding: 10px;
+}
+
+.todo-item label{
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+
+.delete{
+    margin-left: 10px;
+}
